# E7020E_gaming_mouse

./: .gitignore  BOM.csv  BOM.xlsx  CHANGELOG.md  README.md  e7020e-project.ioc
calculations/: button_calcs.md
code/: temp.txt
code/e7020e_rtic/: .gitignore  CHANGELOG.md  Cargo.toml
code/e7020e_rtic/.cargo/: config.toml
code/e7020e_rtic/examples/: i2c_example.rs  itm_rtic_blinky_48mhz.rs  itm_rtic_hello.rs  itm_rtic_hello2.rs  rtic_bare1.rs  rtic_bare10.rs  rtic_bare2.rs  rtic_bare3.rs  rtic_bare3b.rs  rtic_bare4.rs  rtic_bare5.rs  rtic_bare6.rs  rtic_bare7.rs  rtic_bare7b.rs  rtic_bare8.rs  rtic_bare9.rs  rtic_bare9_no_block.rs  rtic_blinky.rs  rtic_blinky_48mhz.rs  rtic_blinky_hal.rs  rtic_button_test.rs  rtic_crash.rs  rtic_hello.rs  rtic_i2c_led.rs  rtic_i2c_test.rs  rtic_macro_test.rs  rtic_macro_test2.rs  rtic_panic.rs  rtic_pmw3389.rs  rtic_simple_mouse.rs  rtic_simple_mouse_test.rs  rtic_usb_mouse.rs  rtic_usb_serial.rs  rtt_rtic_hello.rs
code/e7020e_rtic/src/: PCA9624PW.rs  color.rs  hidDescriptors.rs  lib.rs  macroSystem.rs  matr_math.rs  mouseKeyboardReport.rs  mouseReport.rs  mouse_handeler.rs  pca9624_pw.rs  pmw3389.rs  rgb_pattern_things.rs  srom.rs
code/hosted/rust_version/: 99-hid.rules  Cargo.toml  README.md  example.cfg  hello_world.cfg  ivar.cfg  key.code  mouse-config.cfg  usefull.cfg
code/hosted/rust_version/.cargo/: config.toml
code/hosted/rust_version/examples/: hid_comms.rs  hid_in_out.rs  hid_timing.rs  hid_timing_ssm.rs
code/hosted/rust_version/src/: api_packet.rs  device.rs  lib.rs  main.rs
images/: test_logo.kicad_wks
model/: Logitech_G305-Ultralight-Honeycomb-Bottom-Shell-v2.stl  g305_subframe.stl  g305_top_ultra_light.stl
notes/: pinmap.md
schematics_and_pcb/: #auto_saved_files#  D2F-01F.kicad_mod  Ivar_Erik_rev1.kicad_pcb  Ivar_Erik_rev1.step  Unnamed-schematics_and_pcb 1.stl  Unnamed1-schematics_and_pcb 1.stl  _autosave-schematics_and_pcb.kicad_pcb  _autosave-schematics_and_pcb.kicad_sch  fp-info-cache  mouse.bak  mouse.kicad_sym  rev3.stl  rev4.stl  (+15 more)
(+35 files in other folders)
