[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
name = "hid-host"
version = "0.1.0"
edition = "2021"

readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "1.3.4"

serde = { version = "1.0.136", default-features = false} 
serde_derive = "1.0.136"

[dependencies.ssmarshal]
version = "1.0.0"
default-features = false

[workspace]